// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entriesOfRecord 1`] = `
[
  [
    "Path",
    "value of Path",
  ],
  [
    "path",
    "value of path",
  ],
]
`;

exports[`entriesOfRecord 2`] = `
[
  [
    "Path",
    "value of Path",
  ],
  [
    "path",
    "value of path",
  ],
]
`;

exports[`keysOfRecord 1`] = `
[
  "Path",
  "path",
]
`;

exports[`keysOfRecord 2`] = `
[
  "Path",
  "path",
]
`;

exports[`toRecord 1`] = `
{
  "Path": "value of Path",
  "path": "value of path",
}
`;

exports[`toRecordMap 1`] = `
Map {
  "Path" => "value of Path",
  "path" => "value of path",
}
`;
